emulators/sdlmame/ERROR
gmake[1]: Entering directory '/usr/ports/pobj/mame0173/mame-mame0173/build/projects/sdl/mame/gmake-openbsd'
Precompiling src/emu/emu.h...
In file included from ../../../../../src/lib/util/corestr.h:17:0,
                 from ../../../../../src/emu/emucore.h:36,
                 from ../../../../../src/emu/emu.h:28:
../../../../../src/lib/util/strformat.h: In constructor 'util::detail::format_argument_pack<Stream>::format_argument_pack(Format&&, const util::detail::format_argument<Stream>*, std::enable_if_t<util::detail::format_argument_pack<Stream>::handle_char_array<typename std::remove_reference<Format>::type>::value, long unsigned int>)':
../../../../../src/lib/util/strformat.h:1097:13: error: 'cbegin' is not a member of 'std'
   : m_begin(std::cbegin(fmt))
             ^
../../../../../src/lib/util/strformat.h:1098:11: error: 'cend' is not a member of 'std'
   , m_end(std::cend(fmt))
           ^
../../../../../src/lib/util/strformat.h: In constructor 'util::detail::format_argument_pack<Stream>::format_argument_pack(Format&&, const util::detail::format_argument<Stream>*, std::enable_if_t<util::detail::format_argument_pack<Stream>::handle_container<typename std::remove_reference<Format>::type>::value, long unsigned int>)':
../../../../../src/lib/util/strformat.h:1113:39: error: 'cbegin' is not a member of 'std'
   : m_begin(fmt.empty() ? nullptr : &*std::cbegin(fmt))
                                       ^
../../../../../src/lib/util/strformat.h:1114:60: error: 'cbegin' is not a member of 'std'
   , m_end(fmt.empty() ? nullptr : (m_begin + std::distance(std::cbegin(fmt), std::cend(fmt))))
                                                            ^
../../../../../src/lib/util/strformat.h:1114:78: error: 'cend' is not a member of 'std'
   , m_end(fmt.empty() ? nullptr : (m_begin + std::distance(std::cbegin(fmt), std::cend(fmt))))
                                                                              ^
precompile.make:263: recipe for target '../../../../openbsd/obj/x64/Release/emu.h.gch' failed
gmake[2]: *** [../../../../openbsd/obj/x64/Release/emu.h.gch] Error 1
Makefile:76: recipe for target 'precompile' failed
gmake[1]: *** [precompile] Error 2
gmake[1]: Leaving directory '/usr/ports/pobj/mame0173/mame-mame0173/build/projects/sdl/mame/gmake-openbsd'
makefile:1342: recipe for target 'openbsd_x64' failed
gmake: *** [openbsd_x64] Error 2
*** Error 2 in . (/usr/ports/infrastructure/mk/bsd.port.mk:2672 '/usr/ports/pobj/mame0173/.build_done')
*** Error 1 in /usr/ports/emulators/sdlmame (/usr/ports/infrastructure/mk/bsd.port.mk:2394 'all')
